--- a/apps/landingpage-actions/tsconfig.json
+++ b/apps/landingpage-actions/tsconfig.json
@@ -5,7 +5,12 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@/lib/*": ["lib/*"],
+      "@/anchor/*": ["anchor/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
