--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,8 +2,12 @@
   "name": "@repo/db",
   "version": "1.0.0",
   "main": "index.js",
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} ./src/seed.ts"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:seed": "prisma db seed"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +22,8 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.19.1"
+    "@prisma/client": "^5.19.1",
+    "date-fns": "^3.6.0"
   },
   "exports": {
     "./client": "./src/index.ts"
