--- a/apps/user-web/package.json
+++ b/apps/user-web/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.11"
+    "next": "14.2.11",
+    "@repo/db": "*"
   },
   "devDependencies": {
     "typescript": "^5",
