--- a/apps/landingpage-actions/package.json
+++ b/apps/landingpage-actions/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm i && cd ../../packages/db/ && npm i && npx prisma generate && cd ../../apps/landingpage-actions/ && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,6 +13,7 @@
     "@repo/db": "*",
     "@solana/actions": "^1.6.4",
     "@solana/web3.js": "^1.95.3",
+    "keen-slider": "^6.8.6",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18"
