--- a/apps/seller-web/package.json
+++ b/apps/seller-web/package.json
@@ -10,11 +10,27 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.1",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@reclaimprotocol/js-sdk": "^2.0.0",
+    "@repo/db": "*",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.446.0",
     "next": "14.2.11",
     "next-auth": "^4.24.7",
+    "pino-pretty": "^11.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "@repo/db": "*"
+    "react-qr-code": "^2.0.15",
+    "recharts": "^2.12.7",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
