--- a/apps/seller-web/tsconfig.json
+++ b/apps/seller-web/tsconfig.json
@@ -10,7 +10,8 @@
     "baseUrl": "./src",
     "paths": {
       "@/components/*": ["components/*"],
-      "@/lib/*": ["lib/*"]
+      "@/lib/*": ["lib/*"],
+      "@/*": ["./*"]
     }
   },
   "include": [
